@@ -1,3 +1,11 @@
+2014-06-03  Sergio Martin <sergio.martin@artica.es>
+
+	* general/news_dialog.php: Fix a bug in modal window news that
+	did incompatible with "first time" modal help
+
+	* include/graphs/functions_gd.php: Add a white background to the 
+	progress bars
+
 2014-06-03  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/agentes/module_manager_editor_common.php: Changed to disable
